[tool.poetry]
name = "clerk-backend-api"
version = "3.0.3"
description = "Python Client SDK for clerk.dev"
authors = ["Clerk"]
readme = "README.md"
repository = "https://github.com/clerk/clerk-sdk-python.git"
packages = [
    { include = "clerk_backend_api", from = "src" }
]
include = ["py.typed", "src/clerk_backend_api/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9.2"
cryptography = ">=44.0.1,<45.0.0"
httpcore = ">=1.0.9"
httpx = ">=0.28.1"
pydantic = ">=2.10,<2.11"
pyjwt = ">=2.9.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
"*" = ["py.typed", "src/clerk_backend_api/py.typed"]

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"